--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@webpart/args": "^0.1.1",
-    "@webpart/master": "^0.1.3",
-    "@webpart/process-babel": "^0.1.2",
-    "@webpart/process-compat": "^0.1.3",
-    "@webpart/process-normal": "^0.1.2",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "express": "^4.17.1",
     "qr-image": "^3.2.0"
   }
